--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,9 @@
   "author": "Rajesh Vishwakarma",
   "license": "ISC",
   "devDependencies": {
+    "@types/compression": "^1.7.2",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
     "nodemon": "^2.0.22",
@@ -23,7 +26,11 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "express-jwt": "^8.4.1"
+    "express-jwt": "^8.4.1",
+    "helmet": "^7.0.0"
   }
 }
