api build updated

--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,11 @@
   "name": "server",
   "version": "1.0.0",
   "description": "A backend nodejs api for online-shop",
-  "main": "index.ts",
+  "main": "src/index.ts",
   "scripts": {
-    "start": "nodemon index.ts"
+    "start": "node build/src/index.js",
+    "dev": "nodemon src/index.ts",
+    "build": "tsc -p tsconfig.release.json"
   },
   "keywords": [
     "node",
@@ -13,7 +15,7 @@
     "mern",
     "express"
   ],
-  "author": "Rajesh Vishwakarma",
+  "author": "Rajesh Vishwakarma<sms.rajesh@gmail.com>",
   "license": "ISC",
   "devDependencies": {
     "@types/compression": "^1.7.2",
