--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
-    "helmet": "^7.0.0"
+    "helmet": "^7.0.0",
+    "mongoose": "^7.3.0"
   }
 }
