--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
   "cSpell.ignoreWords": ["MERN"],
-  "cSpell.words": ["Rajesh", "Vishwakarma"]
+  "cSpell.words": ["Rajesh", "tsbuildinfo", "Vishwakarma"]
 }
